feat: add crawling functionality
